Fixed small layout bugs.

--- a/AlertaDengue/static/css/infodengue.css
+++ b/AlertaDengue/static/css/infodengue.css
@@ -1,4 +1,4 @@
-.navbar-light .navbar-nav> li > a{
+.navbar-nav> li > a{
     color: #FFFFFF;
 }
 
